# study-task-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
evaluation/: benchmark_results.csv  manual_tasks_template.txt  plot_results.py  sample_tasks.json
src/study_task_manager/: cli.py  manager.py  task.py
tests/: test_manager.py  test_task.py
