[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "study-task-manager"
version = "0.1.0"
description = "A simple command-line tool for managing university assignments and deadlines."
requires-python = ">=3.11"

[project.scripts]
study-task-manager = "study_task_manager.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.8",
    "pandas>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]